2009-08-17  Michael Eager  <eager@eagercon.com>

	* config.sub: Add Microblaze aliases.
	* testsuite/config-sub.data: Add test cases.

2009-06-11  Steven G. Johnson  <stevenj.mit@gmail.com>
	    Ben Elliston  <bje@gnu.org>

	* config.sub (bluegene, -bluegene, -cnk*): New CNK aliases.
	* testsuite/config-sub.data: Add test cases.

2009-06-09  Olli Savia  <ops@iki.fi>
	    Ben Elliston  <bje@gnu.org>

	* config.guess: Add detection for LynxOS 4.2.
	* testsuite/config-guess.data: Add a test case.

2009-06-09  Ben Elliston  <bje@gnu.org>

	* config.guess (*:NetBSD:*:*): Use grep -q, which is supported on
	this host, instead of the less tidy grep > /dev/null.
	(9000/[34678]??:HP-UX:*:*): Likewise.
	(alpha:Linux:*:*): Likewise.

2009-06-02  Ben Elliston  <bje@gnu.org>

	* config.guess: Factor mips:Linux:*:* and mips64:Linux:*:*.

2009-06-02  Ben Elliston  <bje@gnu.org>

	* config.guess: Drop detection for i386-pc-linux-gnuaout on
	systems with the a.out executable format.  "Here's 5c, kid".

2009-06-02  Ben Elliston  <bje@gnu.org>

	* config.guess: Drop detection for i386-pc-linux-gnuoldld on
	systems with a pre-BFD linker.  "Here's 5c, kid."

2009-06-01  Ben Elliston  <bje@gnu.org>

	Reported by bob.strahan@hp.com.
	* config.guess (8664:Windows_NT:*): MKS on x86-64 machines.
	* testsuite/config-guess.data: Add a test case.

2009-04-27  Neale Ferguson <neale@sinenomine.net>
	    Ben Elliston  <bje@gnu.org>

	* config.guess (s390x:SunOS:*:*): Add s390x-ibm-solaris*.
	* testsuite/config-guess.data: Add a test case.

2009-04-17  Eli Zaretskii  <eliz@gnu.org>

	* config.guess (pc:*:*:*): Return i586-pc-msdosdjgpp, for
	consistency with config.sub.
	* testsuite/config-guess.data: Add a test case.

2009-04-17  Anthony Green  <green@moxielogic.com>
	    Ben Elliston  <bje@gnu.org>

	* config.sub: Handle moxie.
	* testsuite/config-sub.data: New test case.

2009-02-03  Ben Elliston  <bje@gnu.org>

	Report from Przemyslaw Szczygielski.
	* config.guess (i*86:AROS:*:*): Detect AROS.