@@ -1,3 +1,8 @@
+2009-08-17  Ben Elliston  <bje@gnu.org>
+
+	* Makefile (UPLOAD, upload): Remove variable and target.
+	(all): Make this a dummy target.
+
 2009-08-17  Michael Eager  <eager@eagercon.com>
 
 	* config.sub: Add Microblaze aliases.
